--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ body {
 <body>
 <select onchange="main.location = this.value">
 <option selected disabled>Wybierz rok</option>
-<option value="2010.html">2010</option>
-<option value="2011.html">2011</option>
+<option value="2010">2010</option>
+<option value="2011">2011</option>
 </select>
 <hr>
 <iframe name="main" width="100%" height="95%">
